# esp-tflite-micro

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: build.yml  build_esp32.yml  build_esp32s3.yml  ci.yml  issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
components/bus/: 8080_lcd_esp32s3.c  i2c_bus.c  i2s_lcd_esp32_driver.c  i2s_lcd_esp32s2_driver.c  spi_bus.c
components/bus/include/: i2s_lcd_driver.h
components/esp-tflite-micro/: CMakeLists.txt
components/fb_gfx/: fb_gfx.c
components/screen/interface_driver/: scr_interface_driver.c
components/tflite-lib/: CMakeLists.txt
components/tflite-lib/tensorflow/lite/micro/kernels/esp_nn/: add.cc  conv.cc  depthwise_conv.cc  fully_connected.cc  mul.cc  pooling.cc  softmax.cc
components/tflite-lib/tflite-micro/tensorflow/lite/c/: common.c  common.h
components/tflite-lib/tflite-micro/tensorflow/lite/core/api/: flatbuffer_conversions.cc
components/tflite-lib/tflite-micro/tensorflow/lite/experimental/microfrontend/lib/: fft.cpp  fft_util.cpp
components/tflite-lib/tflite-micro/tensorflow/lite/kernels/: kernel_util.cc  kernel_util.h
components/tflite-lib/tflite-micro/tensorflow/lite/kernels/internal/: common.h  compatibility.h
components/tflite-lib/tflite-micro/tensorflow/lite/kernels/internal/reference/: add.h  depthwiseconv_uint8.h  hard_swish.h  portable_tensor_utils.cc  reduce.h  requantize.h  softmax.h  sub.h
components/tflite-lib/tflite-micro/tensorflow/lite/kernels/internal/reference/integer_ops/: mul.h  tanh.h
components/tflite-lib/tflite-micro/tensorflow/lite/micro/: flatbuffer_utils.h  memory_helpers.cc  micro_allocator.cc  micro_graph.cc  micro_interpreter.cc  micro_interpreter.h  test_helpers.cc  test_helpers.h
components/tflite-lib/tflite-micro/tensorflow/lite/micro/kernels/: detection_postprocess.cc  fully_connected.h  split_v.cc
components/tflite-lib/tflite-micro/tensorflow/lite/schema/: schema_generated.h
examples/hello_world/: CMakeLists.txt  README.md
examples/hello_world/jupyter/: create_sine_model.ipynb
examples/hello_world/main/: CMakeLists.txt  idf_component.yml  main.cc  main_functions.cc  output_handler.cc
examples/micro_speech/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/micro_speech/main/: CMakeLists.txt  audio_preprocessor_int8_model_data.h  audio_provider.cc  audio_provider.h  command_responder.cc  command_responder.h  feature_provider.cc  i2s_setup.cc  i2s_setup.h  idf_component.yml  main.cc  main_functions.cc  micro_features_generator.cc  micro_features_generator.h  micro_model_settings.h  model.cc  recognize_commands.cc  recognize_commands.h
examples/micro_speech/test_data/: CMakeLists.txt
examples/mobilenet/: CMakeLists.txt  README.md  img_convert.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
examples/mobilenet/main/: CMakeLists.txt  image.cc  image.h  main.cc  model.h
examples/mobilenet_custom/: CMakeLists.txt  README.md  generate_model.ipynb  mobilenet_custom_model.tflite
examples/mobilenet_custom/main/: CMakeLists.txt  image.h  image1.cc  image2.cc  main.cc  model.cc  model.h
examples/person_detection/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
examples/person_detection/bus/: CMakeLists.txt
examples/person_detection/main/: CMakeLists.txt  Kconfig.projbuild  app_camera_esp.c  app_camera_esp.h  detection_responder.cc  detection_responder.h  esp_cli.c  esp_cli.h  esp_lcd.c  esp_lcd.h  esp_main.h  idf_component.yml  image_provider.cc  image_provider.h  logo_en_240x240_lcd.h  main.cc  main_functions.cc  model_settings.h  pcb_qianzi_model_data.h
examples/person_detection/model/: README.md
examples/person_detection/static_images/: CMakeLists.txt
examples/person_detection/static_images/sample_images/: README.md  image0  image1  image2  image3  image4  image5  image6  image7  image8  image9
scripts/: build_examples.sh  gh_sync_req.txt  sync_from_tflite_micro.sh
signal/micro/kernels/: irfft.cc
tensorflow/lite/micro/esp/: micro_time.cc
tensorflow/lite/micro/kernels/esp_nn/: add.cc  conv.cc  depthwise_conv.cc  fully_connected.cc  mul.cc  pooling.cc
tools/: README.md  hello_world.tflite  requirements.txt  templates.py  tflite_code_generator.py
tools/hello_world/: CMakeLists.txt
tools/hello_world/main/: CMakeLists.txt  constants.cc  constants.h  gen_micro_mutable_op_resolver.h  hello_world_model_data.cc  main.cc  main_functions.cc  main_functions.h  output_handler.cc  output_handler.h
